// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsCell Empty fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Empty
  </div>
</DocumentFragment>
`;

exports[`CommentsCell Failure fragment matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="color: red;"
  >
    Error: Oh no
  </div>
</DocumentFragment>
`;

exports[`CommentsCell Loading fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;

exports[`CommentsCell Success fragment matches snapshot 1`] = `
<DocumentFragment>
  <ul>
    <li>
      {"id":1,"name":"April O'Neil","body":"Cowabunga dudes. This is the first comment!","createdAt":"2022-04-01T12:34:56Z"}
    </li>
    <li>
      {"id":2,"name":"Michelangelo","body":"It's 🍕 time!","createdAt":"2020-02-03T23:00:00Z"}
    </li>
  </ul>
</DocumentFragment>
`;
